<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

                <RelativeLayout
                android:id="@+id/dialog"
                android:alpha=".95"
                android:background="@color/colorTranslucent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/topSection"
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_marginTop="15dp"
                            android:tint="@color/colorRed"
                            android:src="@drawable/ic_highlight_off_white_36dp"
                            android:layout_gravity="center"
                            android:layout_width="90dp"
                            android:layout_height="90dp" />

                        <TextView
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/colorRed"
                            style="@style/AppTheme.Text.Bold"
                            android:text="@string/label_transaction_fail"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/tvTitle"
                            android:layout_marginTop="15dp"
                            android:textColor="@color/colorWhite"
                            style="@style/AppTheme.Text.Bold"
                            android:text="@string/label_please_try_again_later"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>







                    <Button
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/bg_button_purple_selector"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:id="@+id/btnBackToHome"
                        android:layout_alignParentBottom="true"
                        android:alpha=".8"
                        android:layout_margin="16dp"
                        android:text="@string/label_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

</layout>